3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

 common/object.c: when inserting an object, need to fix 'map' too, if not
 set later, will crash.
---
Implement feature request #1680229: dmhide - glowing things.
 common/map.c: totally ignore hidden DMs for map update.
---
Implement feature request #1669464: Need new command - dmtell.
 include/sproto.h
 server/c_chat.c commands.c
---
server/c_wiz.c: enable 'teleport' to use a partial name.
server/c_misc: 'listen' should be positive.
---
Fix bug #1668283: Crossfire.CreateObjectByName is faulty, by applying
 patch (feature request) #1682802: CreateObjectByName fix/change.
 Code by Yann Chackhoff.
Also fix a crash when teleporting a newly created object.
 server/plugins.c
---
Fix bug #1671102: Generic destroy can remove permanent buttons. The code was
 doing a wrong check related to marked item/destroyer.
Fix bug #1657675: multi-tile buildable object bug (note: one .x11 image though).
 code now uses multi-tile aware function to generate object, and correctly
 checks all relevant spots for building.
 server/build_map.c
---
plugins/template/create_plugin.sh: plugin generation script.
plugins/template/include/plugin_template.h: remove unused file, fix comment.
---
Random map functions for plugins.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Give access to random map generation to plugins.
 include/sproto.h
 server/plugins.c
---
Allow one to give a prebuilt layout (.#<> and such) for random map generation.
 random_maps/random_map.c rproto.h standalone.c
 server/server.c
---
plugins/template/plugin_template.c: use cf_log instead of printf, fix missing
 CF_PLUGIN (Win32 specific).
---