@@ -15,6 +15,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/spell_util.c: ignore sp/gr/time cost for DM casting spells.
+---
  common/object.c: when inserting an object, need to fix 'map' too, if not
  set later, will crash.
 ---
